fixed vert scrollbar and lazyload and margin under 600px for p1

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ html {
     animation: fadeInAnimation ease 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    margin: -10px -10px -10px -10px;
+    /*margin: -10px -10px -10px -10px;*/
 }
 
 #btncenterGit {
@@ -85,7 +85,7 @@ html {
     margin-top: 0px;
     text-shadow: 2px 2px 1px black;
     color: #e7af3f;
-    animation: fadeInAnimation ease 1s;
+    animation: fadeInAnimation ease 0.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
@@ -96,7 +96,7 @@ html {
     margin: 0 auto;
     padding: 10px 10px;
     color: #f0deba;
-    animation: fadeInAnimation ease 3s;
+    animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     text-align: center;
@@ -149,30 +149,27 @@ a:hover {
 }
 
 .containerArt {
-    max-width: 100rem;
+    max-width: 110rem;
     margin: 0 auto;
-    padding: 0 2rem 2rem;
-    padding-top: 5%;
+    padding-top: 4vmin;
     padding-left: 10%;
     padding-right: 10%;
 }
 
 .containerFood {
     display: none;
-    max-width: 100rem;
+    max-width: 110rem;
     margin: 0 auto;
-    padding: 0 2rem 2rem;
-    padding-top: 5%;
+    padding-top: 4vmin;
     padding-left: 10%;
     padding-right: 10%;
 }
 
 .containerPics {
     display: none;
-    max-width: 100rem;
+    max-width: 110rem;
     margin: 0 auto;
-    padding: 0 2rem 2rem;
-    padding-top: 5%;
+    padding-top: 4vmin;
     padding-left: 10%;
     padding-right: 10%;
 }
@@ -264,6 +261,7 @@ S #myBtn:hover {
 
     #paragraph1 {
         font-size: smaller;
+        margin-bottom: -1vh;
     }
 
     #paragraph2 {
@@ -303,7 +301,7 @@ S #myBtn:hover {
     margin-top: 25px;
     padding: 10px 10px;
     background-color: #a07a2e;
-    color: black;
+    color: rgb(0, 0, 0);
     font-family: "Poppins";
     font-size: 22px;
     border-radius: 6px;
